--- a/package.json
+++ b/package.json
@@ -3,23 +3,99 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "@sparticuz/chromium": "^133.0.0",
+    "agent-base": "^7.1.3",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "ast-types": "^0.13.4",
+    "b4a": "^1.6.7",
+    "bare-events": "^2.5.4",
+    "bare-fs": "^4.1.3",
+    "bare-os": "^3.6.1",
+    "bare-path": "^3.0.0",
+    "bare-stream": "^2.6.5",
+    "basic-ftp": "^5.0.5",
+    "buffer-crc32": "^0.2.13",
+    "chrome-aws-lambda": "^10.1.0",
+    "chromium-bidi": "^4.1.1",
+    "cliui": "^8.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "data-uri-to-buffer": "^6.0.2",
+    "debug": "^4.4.0",
+    "degenerator": "^5.0.1",
+    "devtools-protocol": "^0.0.1425554",
+    "emoji-regex": "^8.0.0",
+    "end-of-stream": "^1.4.4",
+    "escalade": "^3.2.0",
+    "escodegen": "^2.1.0",
+    "esprima": "^4.0.1",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "extract-zip": "^2.0.1",
+    "fast-fifo": "^1.3.2",
+    "fd-slicer": "^1.1.0",
+    "get-caller-file": "^2.0.5",
+    "get-stream": "^5.2.0",
+    "get-uri": "^6.0.4",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
+    "ip-address": "^9.0.5",
+    "is-fullwidth-code-point": "^3.0.0",
+    "jsbn": "^1.1.0",
+    "lambdafs": "^2.1.1",
+    "lru-cache": "^7.18.3",
+    "mitt": "^3.0.1",
+    "ms": "^2.1.3",
+    "netmask": "^2.0.2",
+    "once": "^1.4.0",
+    "pac-proxy-agent": "^7.2.0",
+    "pac-resolver": "^7.0.1",
+    "pend": "^1.2.0",
+    "progress": "^2.0.3",
+    "proxy-agent": "^6.5.0",
+    "proxy-from-env": "^1.1.0",
+    "pump": "^3.0.2",
+    "puppeteer-core": "^24.7.2",
+    "require-directory": "^2.1.1",
+    "semver": "^7.7.1",
+    "smart-buffer": "^4.2.0",
+    "socks": "^2.8.4",
+    "socks-proxy-agent": "^8.0.5",
+    "source-map": "^0.6.1",
+    "sprintf-js": "^1.1.3",
+    "streamx": "^2.22.0",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "tar-fs": "^3.0.8",
+    "tar-stream": "^3.1.7",
+    "text-decoder": "^1.2.3",
+    "tslib": "^2.8.1",
+    "typed-query-selector": "^2.12.0",
+    "undici-types": "^6.21.0",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "ws": "^8.18.1",
+    "y18n": "^5.0.8",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "yauzl": "^2.10.0",
+    "zod": "^3.24.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Crysis-X/curly-disco.git"
+    "url": "git+https://github.com/Crysis-X/testest.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
-    "url": "https://github.com/Crysis-X/curly-disco/issues"
+    "url": "https://github.com/Crysis-X/testest/issues"
   },
-  "homepage": "https://github.com/Crysis-X/curly-disco#readme",
-  "dependencies": {
-    "chrome-aws-lambda": "10.1.0",
-    "puppeteer-core": "10.4.0"
-  }
+  "homepage": "https://github.com/Crysis-X/testest#readme"
 }
